@@ -23,61 +23,64 @@
 &emsp;&emsp;&emsp;<a href="#20">3.6.5. Parallel Old收集器</a>  
 &emsp;&emsp;&emsp;<a href="#21">3.6.6. CMS(Concurrent Mark Sweep)收集器</a>  
 &emsp;&emsp;&emsp;<a href="#22">3.6.7. Garbage First 收集器</a>  
-&emsp;&emsp;&emsp;<a href="#23">3.6.8. 其他的垃圾收集器</a>  
-&emsp;&emsp;&emsp;<a href="#24">3.6.9. 选用收集器的三个因素</a>  
-&emsp;<a href="#25">4. java虚拟机监控工具</a>  
-&emsp;&emsp;<a href="#26">4.1. jps</a>  
-&emsp;&emsp;<a href="#27">4.2. jstat</a>  
-&emsp;&emsp;<a href="#28">4.3. jinfo</a>  
-&emsp;&emsp;<a href="#29">4.4. jmap 和 jhat</a>  
-&emsp;&emsp;<a href="#30">4.5. jstack</a>  
-&emsp;&emsp;<a href="#31">4.6. jconsole</a>  
-&emsp;<a href="#32">5. 类文件</a>  
-&emsp;&emsp;<a href="#33">5.1. 类文件结构</a>  
-&emsp;&emsp;<a href="#34">5.2. 双亲委派模型</a>  
-&emsp;&emsp;<a href="#35">5.3. 类初始化的时机</a>  
-&emsp;&emsp;<a href="#36">5.4. 类的生命周期</a>  
-&emsp;&emsp;&emsp;<a href="#37">5.4.1. 加载</a>  
-&emsp;&emsp;&emsp;<a href="#38">5.4.2. 验证</a>  
-&emsp;&emsp;&emsp;<a href="#39">5.4.3. 准备</a>  
-&emsp;&emsp;&emsp;<a href="#40">5.4.4. 解析</a>  
-&emsp;&emsp;&emsp;<a href="#41">5.4.5. 初始化</a>  
-&emsp;&emsp;&emsp;<a href="#42">5.4.6. 卸载</a>  
-&emsp;&emsp;<a href="#43">5.5. 虚拟机中对象的创建</a>  
-&emsp;<a href="#44">6. CMS + ParNew收集器的流程梳理</a>  
-&emsp;&emsp;<a href="#45">6.1. young区域(年轻代)</a>  
-&emsp;&emsp;&emsp;<a href="#46">6.1.1. 对象分配内存方式</a>  
-&emsp;&emsp;<a href="#47">6.2. old区域(老年代)</a>  
-&emsp;&emsp;&emsp;<a href="#48">6.2.1. CMS GC原因</a>  
-&emsp;&emsp;&emsp;<a href="#49">6.2.2. CMS GC 垃圾回收模式</a>  
-&emsp;&emsp;&emsp;<a href="#50">6.2.3. 其他老年代问题</a>  
-&emsp;&emsp;<a href="#51">6.3. 相关文章</a>  
-&emsp;<a href="#52">7. Java虚拟机内存调优</a>  
-&emsp;&emsp;<a href="#53">7.1. 基本概念重述</a>  
-&emsp;&emsp;&emsp;<a href="#54">7.1.1. 工具整理</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#55">7.1.1.1. 命令行终端</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#56">7.1.1.2. 可视化界面</a>  
-&emsp;&emsp;<a href="#57">7.2. GC 调优目的</a>  
-&emsp;&emsp;<a href="#58">7.3. GC 调优策略</a>  
-&emsp;&emsp;<a href="#59">7.4. 调优指标</a>  
-&emsp;&emsp;<a href="#60">7.5. 问题排查思路</a>  
-&emsp;&emsp;<a href="#61">7.6. 案例</a>  
-&emsp;&emsp;&emsp;<a href="#62">7.6.1. 美团技术案例（基于CMS JDK1.8）</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#63">7.6.1.1. 场景一：动态扩容引起的空间震荡</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#64">7.6.1.2. 场景二：显式 GC 的去与留 (System.gc)</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#65">7.6.1.3. 场景三：MetaSpace 区 OOM</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#66">7.6.1.4. 场景四：过早晋升 </a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#67">7.6.1.5. 场景五：CMS Old GC 频繁 </a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#68">7.6.1.6. 场景六：单次 CMS Old GC 耗时长</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#69">7.6.1.7. 场景七：内存碎片&收集器退化</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#70">7.6.1.8. 场景八：堆外内存 OOM</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#71">7.6.1.9. 场景九：JNI 引发的 GC 问题</a>  
-&emsp;&emsp;&emsp;<a href="#72">7.6.2. 不恰当的数据结构导致内存过大</a>  
-&emsp;&emsp;&emsp;<a href="#73">7.6.3. 堆外内存导致溢出错误</a>  
-&emsp;&emsp;&emsp;<a href="#74">7.6.4. 异步系统Socket连接</a>  
-&emsp;&emsp;&emsp;<a href="#75">7.6.5. Evosuite 自动生成单元测试</a>  
-&emsp;&emsp;&emsp;<a href="#76">7.6.6. 其他案例分析资料</a>  
-&emsp;&emsp;&emsp;<a href="#77">7.6.7. 其他建议</a>  
+&emsp;&emsp;&emsp;<a href="#23">3.6.8. CMS 与 G1 对比</a>  
+&emsp;&emsp;&emsp;<a href="#24">3.6.9. 其他的垃圾收集器</a>  
+&emsp;&emsp;&emsp;<a href="#25">3.6.10. 选用收集器的三个因素</a>  
+&emsp;<a href="#26">4. java虚拟机监控工具</a>  
+&emsp;&emsp;<a href="#27">4.1. jps</a>  
+&emsp;&emsp;<a href="#28">4.2. jstat</a>  
+&emsp;&emsp;<a href="#29">4.3. jinfo</a>  
+&emsp;&emsp;<a href="#30">4.4. jmap 和 jhat</a>  
+&emsp;&emsp;<a href="#31">4.5. jstack</a>  
+&emsp;&emsp;<a href="#32">4.6. jconsole</a>  
+&emsp;<a href="#33">5. 类文件</a>  
+&emsp;&emsp;<a href="#34">5.1. 类文件结构</a>  
+&emsp;&emsp;<a href="#35">5.2. 双亲委派模型</a>  
+&emsp;&emsp;&emsp;<a href="#36">5.2.1. 自定义类加载器</a>  
+&emsp;&emsp;<a href="#37">5.3. 类初始化的时机</a>  
+&emsp;&emsp;<a href="#38">5.4. 类的生命周期</a>  
+&emsp;&emsp;&emsp;<a href="#39">5.4.1. 加载</a>  
+&emsp;&emsp;&emsp;<a href="#40">5.4.2. 验证</a>  
+&emsp;&emsp;&emsp;<a href="#41">5.4.3. 准备</a>  
+&emsp;&emsp;&emsp;<a href="#42">5.4.4. 解析</a>  
+&emsp;&emsp;&emsp;<a href="#43">5.4.5. 初始化</a>  
+&emsp;&emsp;&emsp;<a href="#44">5.4.6. 卸载</a>  
+&emsp;&emsp;<a href="#45">5.5. 虚拟机中对象的创建</a>  
+&emsp;<a href="#46">6. 堆内存的设置要点</a>  
+&emsp;<a href="#47">7. CMS + ParNew收集器的流程梳理</a>  
+&emsp;&emsp;<a href="#48">7.1. young区域(年轻代)</a>  
+&emsp;&emsp;&emsp;<a href="#49">7.1.1. 对象分配内存方式</a>  
+&emsp;&emsp;<a href="#50">7.2. old区域(老年代)</a>  
+&emsp;&emsp;&emsp;<a href="#51">7.2.1. CMS GC原因</a>  
+&emsp;&emsp;&emsp;<a href="#52">7.2.2. CMS GC 垃圾回收模式</a>  
+&emsp;&emsp;&emsp;<a href="#53">7.2.3. 其他老年代问题</a>  
+&emsp;&emsp;<a href="#54">7.3. 相关文章</a>  
+&emsp;<a href="#55">8. Java虚拟机内存调优</a>  
+&emsp;&emsp;<a href="#56">8.1. 基本概念重述</a>  
+&emsp;&emsp;&emsp;<a href="#57">8.1.1. 工具整理</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#58">8.1.1.1. 命令行终端</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#59">8.1.1.2. 可视化界面</a>  
+&emsp;&emsp;<a href="#60">8.2. GC 调优目的</a>  
+&emsp;&emsp;<a href="#61">8.3. GC 调优策略</a>  
+&emsp;&emsp;<a href="#62">8.4. 调优指标</a>  
+&emsp;&emsp;<a href="#63">8.5. 问题排查思路</a>  
+&emsp;&emsp;<a href="#64">8.6. 案例</a>  
+&emsp;&emsp;&emsp;<a href="#65">8.6.1. 美团技术案例（基于CMS JDK1.8）</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#66">8.6.1.1. 场景一：动态扩容引起的空间震荡</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#67">8.6.1.2. 场景二：显式 GC 的去与留 (System.gc)</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#68">8.6.1.3. 场景三：MetaSpace 区 OOM</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#69">8.6.1.4. 场景四：过早晋升 </a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#70">8.6.1.5. 场景五：CMS Old GC 频繁 </a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#71">8.6.1.6. 场景六：单次 CMS Old GC 耗时长</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#72">8.6.1.7. 场景七：内存碎片&收集器退化</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#73">8.6.1.8. 场景八：堆外内存 OOM</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#74">8.6.1.9. 场景九：JNI 引发的 GC 问题</a>  
+&emsp;&emsp;&emsp;<a href="#75">8.6.2. 不恰当的数据结构导致内存过大</a>  
+&emsp;&emsp;&emsp;<a href="#76">8.6.3. 堆外内存导致溢出错误</a>  
+&emsp;&emsp;&emsp;<a href="#77">8.6.4. 异步系统Socket连接</a>  
+&emsp;&emsp;&emsp;<a href="#78">8.6.5. Evosuite 自动生成单元测试</a>  
+&emsp;&emsp;&emsp;<a href="#79">8.6.6. 其他案例分析资料</a>  
+&emsp;&emsp;&emsp;<a href="#80">8.6.7. 其他建议</a>  
 # <a name="0">JVM </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 ## <a name="1">面试题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 介绍下 Java 内存区域（运行时数据区）
@@ -97,34 +100,34 @@
 
 ## <a name="2">虚拟机数据区</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1、程序计数器
- - 定义：可以看作是当前线程所执行的字节码的行号指示器，为线程隔离的数据区。
- - java多线程切换时，每个线程独立的程序计数器，各条线程之间的计数器互不影响，独立存储，保证了线程切换后能恢复到正确的位置。
- - 唯一一个无OOM的区域
+- 定义：可以看作是当前线程所执行的字节码的行号指示器，为线程隔离的数据区。
+- java多线程切换时，每个线程独立的程序计数器，各条线程之间的计数器互不影响，独立存储，保证了线程切换后能恢复到正确的位置。
+- 唯一一个无OOM的区域
  
 2、Java虚拟机栈
- - 定义：每个方法执行的时候，Java虚拟机都会同步的创建一个栈帧用于储存局部变量表、操作数栈、动态链接、方法出口等信息。每个方法被调用直至执行完毕的过程，就对应着一个栈帧在虚拟机栈中从入栈到出栈的过程。
+- 定义：每个方法执行的时候，Java虚拟机都会同步的创建一个栈帧用于储存局部变量表、操作数栈、动态链接、方法出口等信息。每个方法被调用直至执行完毕的过程，就对应着一个栈帧在虚拟机栈中从入栈到出栈的过程。
     - > 栈帧（Stack Frame）用于存储局部变量表、操作数栈、动态链接、方法出口等信息
- - 局部变量表存放了编译期可知的各种Java虚拟机基本数据类型（boolean、byte、char、short、int、float、long、double）、对象引用（reference类型）和returnAddress类型（指向一条字节码指令的地址）、
- - 在栈深度溢出或栈扩展失败时分别抛出StackOverFlowError和OutOfMemoryError的异常。 
+- 局部变量表存放了编译期可知的各种Java虚拟机基本数据类型（boolean、byte、char、short、int、float、long、double）、对象引用（reference类型）和returnAddress类型（指向一条字节码指令的地址）、
+- 在栈深度溢出或栈扩展失败时分别抛出StackOverFlowError和OutOfMemoryError的异常。 
  
 3、本地方法栈
- - 定义：为虚拟机使用到的本地（Native）方法服务。
- - HotSpot直接把本方法栈和虚拟机栈合二为一。
- - 在栈深度溢出或栈扩展失败时分别抛出StackOverFlowError和OutOfMemoryError的异常。
+- 定义：为虚拟机使用到的本地（Native）方法服务。
+- HotSpot直接把本方法栈和虚拟机栈合二为一。
+- 在栈深度溢出或栈扩展失败时分别抛出StackOverFlowError和OutOfMemoryError的异常。
  
 4、Java堆
- - 定义:是虚拟机所管理的内存中最大的一块。Java堆是被所有线程共享的一块内存区域，在虚拟机启动时创建。
- - 参数-Xmx和-Xms 最大堆内存和最小堆内存
+- 定义:是虚拟机所管理的内存中最大的一块。Java堆是被所有线程共享的一块内存区域，在虚拟机启动时创建。
+- 参数-Xmx和-Xms 最大堆内存和最小堆内存
  ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/jvm/picture/hotstop-heap.jpg)
 
 5、方法区
- - 定义：是被各个线程共享的内存区域，它用于存储已被虚拟机加载的类型信息、常量、静态变量、即时编译器编译后的代码缓存等数据。
- - JDK8以前使用永久代来实现方法区（-XX:MaxPermSize 设置上限）
+- 定义：是被各个线程共享的内存区域，它用于存储已被虚拟机加载的类型信息、常量、静态变量、即时编译器编译后的代码缓存等数据。
+- JDK8以前使用永久代来实现方法区（-XX:MaxPermSize 设置上限）
   - 方法区类似于接口，永久代类似于实现类的关系。使用永久代的时候，可以设置内存上限，而且不同的虚拟机的实现不一样，因此更容易遇到内存溢出的问题。
  
 6、运行时常量池
- - 定义：运行时常量池是方法区的一部分。Class文件除类字段、方法、接口等描述信息外，还有一项信息是常量池表，用于存放编译期生成的各种字面量和符号引用，在类加载后存放到方法区的运行时常量池中。
- - 运行时常量池具备动态性，运行期间可以将新的常量放入池中，当无法申请到空间抛出OutOfMemoryError异常。
+- 定义：运行时常量池是方法区的一部分。Class文件除类字段、方法、接口等描述信息外，还有一项信息是常量池表，用于存放编译期生成的各种字面量和符号引用，在类加载后存放到方法区的运行时常量池中。
+- 运行时常量池具备动态性，运行期间可以将新的常量放入池中，当无法申请到空间抛出OutOfMemoryError异常。
 
   
   
@@ -271,54 +274,69 @@
 ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/jvm/picture/parallel.jpg)
 
 #### <a name="21">CMS(Concurrent Mark Sweep)收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-- 定义：一种以获取最短回收停顿时间为目标的收集器，工作于老年代。
-- 运行过程解析：基于标记-清除算法实现，具体步骤如下，
-  - 初始标记：仅仅标记一下GC Root对象能直接关联到的对象，速度很快，需要暂停所有线程。
-  - 并发标记：从GC Root关联对象开始遍历整个对象图的过程，可以与用户线程共同执行。
-  - 重新标记：因用户程序继续运行而导致标记产生变动的那部分对象的标记记录，通常比初始标记长远比并发标记段。
-  - 并发清除：清理删除掉标记阶段判断的已经死亡的对象，由于不需要移动对象，因此可以与用户线程共同执行。
-- 特点：
-  - 1.对处理器资源非常敏感。CMS默认启动的回收线程数是(处理器数量+3)/4，因此弱核心数量在4个以上，占用内存不超过25%。若核心数量小于4，则占用内存过大。
-  - 2.无法处理“浮动垃圾”，有可能出现并发模式失败进而导致一次Full GC。浮动垃圾为出现在标记过程结束之后产生的对象。因为CMS要支持手机过程中与用户线程并存，因此不能在老年代几乎被填满时再运行，需要预留一部分空间供并发收集的程序运行。
+定义：一种以获取最短回收停顿时间为目标的收集器，工作于老年代。
+
+运行过程解析：基于标记-清除算法实现，具体步骤如下，
+- 初始标记：仅仅标记一下GC Root对象能直接关联到的对象，速度很快，需要暂停所有线程。
+- 并发标记：从GC Root关联对象开始遍历整个对象图的过程，可以与用户线程共同执行。
+- 重新标记：因用户程序继续运行而导致标记产生变动的那部分对象的标记记录，通常比初始标记长远比并发标记段。
+- 并发清除：清理删除掉标记阶段判断的已经死亡的对象，由于不需要移动对象，因此可以与用户线程共同执行。
+
+特点：
+1. 对处理器资源非常敏感。CMS默认启动的回收线程数是(处理器数量+3)/4，因此弱核心数量在4个以上，占用内存不超过25%。若核心数量小于4，则占用内存过大。
+2. 无法处理“浮动垃圾”，有可能出现并发模式失败进而导致一次Full GC。浮动垃圾为出现在标记过程结束之后产生的对象。因为CMS要支持手机过程中与用户线程并存，因此不能在老年代几乎被填满时再运行，需要预留一部分空间供并发收集的程序运行。
     - JDK5中设置CMS在老年代使用了68%便会激活，JDK6默认的设置提高到92%。当运行预留的内存无法满足程序分配新对象的需要，就会出现一次“并发失败”。后备预案为冻结用户线程，启用Serial Old进行老年代的垃圾收集。
-    - -XX:CMSInitiatingOccupancyFraction 可以设置触发CMS收集的百分比。
-  - 参数-XX:CMSFullGCsBeforeCompaction：作用是要求CMS收集器在执行过若干次不整理的Full GC之后，下一次先进行碎片整理(默认值为0，表示每次FullGC都进行碎片整理) 
+    - `-XX:CMSInitiatingOccupancyFraction `可以设置触发CMS收集的百分比。
+- 参数-XX:CMSFullGCsBeforeCompaction：作用是要求CMS收集器在执行过若干次不整理的Full GC之后，下一次先进行碎片整理(默认值为0，表示每次FullGC都进行碎片整理) 
 
 ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/jvm/picture/cms-1.jpg)
 
 #### <a name="22">Garbage First 收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-- 定义：面向服务端应用的垃圾收集器，基于Region的堆内存布局进行垃圾收集，每一个Region都可以根据需要扮演新生代的Eden空间、Survivor空间和老年代空间。Region中还有一类特殊的Humongous区域，专门用来存储大对象，G1认为只要超过了一个Region一半的对象即可认为是大对象。对于Humongous区域，正常当做老年代一部分。
+定义：面向服务端应用的垃圾收集器，基于Region的堆内存布局进行垃圾收集，每一个Region都可以根据需要扮演新生代的Eden空间、Survivor空间和老年代空间。Region中还有一类特殊的Humongous区域，专门用来存储大对象，G1认为只要超过了一个Region一半的对象即可认为是大对象。对于Humongous区域，正常当做老年代一部分。
+
 - 参数Region的大小可通过-XX:G1HeapRegionSize设定，取值范围为1M~32M，为2的N次幂。
 - 用户设定的允许收集停顿时间使用参数-XX:MaxGCPauseMills指定，默认为200毫秒。调的调小会导致每次的回收集只占内存的很小一部分，收集的速度慢于分配的速度导致垃圾堆积，进而引发Full GC。正常设置为100~300毫秒之间。
-- 运行步骤：
-  1. 初始标记：标记GC Root对象能直接关联的对象并修改TAMS指针的值为正确的空区域。需要暂停线程，但是时间很短，借用进行Minor GC时同步完成。
-  2. 并发标记：根据GC Root进行可达性分析，扫描对象图。完成扫描后，处理SATB记录下并发时有引用变动的对象。
-  3. 最终标记：短暂暂停用户线程，处理并发阶段结束后，少量的SATB记录。
-  4. 筛选回收：更新Region的统计数据，进行回收价值和成本的排序，根据用户期望的停顿时间来构建回收集合。回收集合的存活对象复制到空的Region，再清理旧的Region。涉及到对象移动，需要暂停用户线程，使用多线程并行完成移动。
-- G1整体是基于标记-整理算法实现的收集器，但从局部优势基于标记-复制算法实现。
-- 特点:
-  1. 避免在整个Java堆进行全区域的垃圾回收，而是让G1跟踪每个Region的垃圾回收的价值及回收所需的时间，在后台维护一个优先级表。根据用户设定的允许收集停顿时间，优先回收价值收益最大的Region。(使用参数-XX:MaxGCPauseMills指定)
-  2. G1收集器每个Region都需要自己的记忆集，记录跨区域引用，因此比其他收集器要耗费内存，大约为java堆内存容量10%~20%。
-  3. 通过在Region中划分空间(使用两TAMS指针，标记一块区域)用于并发回收的新对象分配，解决并发标记阶段与用户线程互不干扰。同样若内存分配速度大于内存回收速度，也许冻结用户线程Full GC。
-  4. CMS使用增量更新算法，而G1使用原始快照(SATB)算法来解决，用户线程改变对象的引用关系，不打破原有的对象图结构，防止标记错误。
-  5. 可靠停顿预测模型的建立：根据每个Region的回收成本，分析出收集的平均值、标准偏差、置信度等统计信息。
+
+运行步骤：
+1. 初始标记：标记GC Root对象能直接关联的对象并修改TAMS指针的值为正确的空区域。需要暂停线程，但是时间很短，借用进行Minor GC时同步完成。
+2. 并发标记：根据GC Root进行可达性分析，扫描对象图。完成扫描后，处理SATB记录下并发时有引用变动的对象。
+3. 最终标记：短暂暂停用户线程，处理并发阶段结束后，少量的SATB记录。
+4. 筛选回收：更新Region的统计数据，进行回收价值和成本的排序，根据用户期望的停顿时间来构建回收集合。回收集合的存活对象复制到空的Region，再清理旧的Region。涉及到对象移动，需要暂停用户线程，使用多线程并行完成移动。
+
+G1整体是基于标记-整理算法实现的收集器，但从局部优势基于标记-复制算法实现。
+
+特点:
+1. 避免在整个Java堆进行全区域的垃圾回收，而是让G1跟踪每个Region的垃圾回收的价值及回收所需的时间，在后台维护一个优先级表。根据用户设定的允许收集停顿时间，优先回收价值收益最大的Region。(使用参数-XX:MaxGCPauseMills指定)
+2. G1收集器每个Region都需要自己的记忆集，记录跨区域引用，因此比其他收集器要耗费内存，大约为java堆内存容量10%~20%。
+3. 通过在Region中划分空间(使用两TAMS指针，标记一块区域)用于并发回收的新对象分配，解决并发标记阶段与用户线程互不干扰。同样若内存分配速度大于内存回收速度，也许冻结用户线程Full GC。
+4. CMS使用增量更新算法，而G1使用原始快照(SATB)算法来解决，用户线程改变对象的引用关系，不打破原有的对象图结构，防止标记错误。
+5. 可靠停顿预测模型的建立：根据每个Region的回收成本，分析出收集的平均值、标准偏差、置信度等统计信息。
 - 缺点：内存占用过高，在小内存应用上CMS的表现大于G1。
   
 ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/jvm/picture/g1.jpg)
 ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/jvm/picture/g1-memory.jpg)
 
-#### <a name="23">其他的垃圾收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="23">CMS 与 G1 对比</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+CMS 以获取最短回收停顿时间为目标的收集器，基于分代收集理念设计。
+G1 GC 这是一种兼顾吞吐量和停顿时间的 GC 实现，基于分区收集理念设计，部分结合分代收集理念。
+
+1. 对处理器资源非常敏感。CMS默认启动的回收线程数是(处理器数量+3)/4，因此弱核心数量在4个以上，占用内存不超过25%。若核心数量小于4，则占用内存过大。
+2. 无法处理“浮动垃圾”，有可能出现并发模式失败进而导致一次Full GC。浮动垃圾为出现在标记过程结束之后产生的对象。因为CMS要支持手机过程中与用户线程并存，因此不能在老年代几乎被填满时再运行，需要预留一部分空间供并发收集的程序运行。
+
+TODO
+
+#### <a name="24">其他的垃圾收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - Shenandoah 收集器：仅存在OpenJdk，区别G1的特点为支持并发整理，使用转发指针和读屏障实现。
 - ZGC 收集器：Region具有动态性，并分为大中小三个Region，使用染色指针技术实现并发整理算法。
 - Epsilon收集器：无操作收集器。
 
-#### <a name="24">选用收集器的三个因素</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="25">选用收集器的三个因素</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 如果是数据分析、科学计算类任务，目标是尽快可以算出结果，那么吞吐量为主要关注点。如果为SLA应用，停顿时间直接影响任务质量，严重甚至会导致事务超时，那么延迟是主要的关注点。
 2. 使用运行的基础设施的指标。
 3. JDK对应的版本。
 
-## <a name="25">java虚拟机监控工具</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-### <a name="26">jps</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="26">java虚拟机监控工具</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="27">jps</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - jps (JVM Process Status）: 类似 UNIX 的 ps 命令。用户查看所有 Java 进程的启动类、传入参数和 Java 虚拟机参数等信息；
   - ```
     [root@iZuf6ee30yhz3x9bqf63clZ apache-tomcat-8.5.31]# jps -l
@@ -331,7 +349,7 @@
     3828 Jps -Dapplication.home=/usr/java/jdk1.8.0_221-amd64 -Xms8m
     2903 Bootstrap -Djava.util.logging.config.file=/usr/local/apache-tomcat-8.5.31/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djdk.tls.ephemeralDHKeySize=2048 -Djava.protocol.handler.pkgs=org.apache.catalina.webresources -Dorg.apache.catalina.security.SecurityListener.UMASK=0027 -Dignore.endorsed.dirs= -Dcatalina.base=/usr/local/apache-tomcat-8.5.31 -Dcatalina.home=/usr/local/apache-tomcat-8.5.31 -Djava.io.tmpdir=/usr/local/apache-tomcat-8.5.31/temp
     ```
-### <a name="27">jstat</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="28">jstat</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
  jstat（ JVM Statistics Monitoring Tool）: 用于收集 HotSpot 虚拟机各方面的运行数据;
 - jstat -gc -h3 31736 1000 10表示分析进程 id 为 31736 的 gc 情况，每隔 1000ms 打印一次记录，打印 10 次停止，每 3 行后打印指标头部。
   - ```
@@ -347,7 +365,7 @@
     ```
 
 - 相关资料：https://www.xttblog.com/?p=3175
-### <a name="28">jinfo</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="29">jinfo</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 jinfo (Configuration Info for Java) : Configuration Info forJava,显示虚拟机配置信息;
   - ```
     C:\Users\SnailClimb>jinfo  -flag MaxHeapSize 17340
@@ -355,7 +373,7 @@ jinfo (Configuration Info for Java) : Configuration Info forJava,显示虚拟机
     C:\Users\SnailClimb>jinfo  -flag PrintGC 17340
     -XX:-PrintGC
     ```
-### <a name="29">jmap 和 jhat</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="30">jmap 和 jhat</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 jmap (Memory Map for Java) :生成堆转储快照;
   - ```
     [root@iZuf6ee30yhz3x9bqf63clZ apache-tomcat-8.5.31]# jmap -dump:format=b,file=elasticfoam.bin 2903
@@ -377,7 +395,7 @@ jhat (JVM Heap Dump Browser ) : 用于分析 heapdump 文件，它会建立一�
     Started HTTP server on port 7000
     Server is ready.
     ```
-### <a name="30">jstack</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="31">jstack</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 jstack (Stack Trace for Java):生成虚拟机当前时刻的线程快照，线程快照就是当前虚拟机内每一条线程正在执行的方法堆栈的集合。
   - ```
     Found one Java-level deadlock:
@@ -413,7 +431,7 @@ jstack (Stack Trace for Java):生成虚拟机当前时刻的线程快照，线�
   jstack -l pid > filename // 输出当前快照
   cat filename| grep '线程ID（16进制）' -C 8     // 查找匹配线程，-C 查看前后多少行数据
   ```
-### <a name="31">jconsole</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="32">jconsole</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 JConsole:Java 监视与管理控制台，很强大，可以检测死锁，查看堆的内存释放情况。
 - 如果需要使用 JConsole 连接远程进程，可以在远程 Java 程序启动时加上下面这些参数:
 ```
@@ -423,15 +441,15 @@ JConsole:Java 监视与管理控制台，很强大，可以检测死锁，查看
 -Dcom.sun.management.jmxremote.ssl=false
 ```
 
-## <a name="32">类文件</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="33">类文件</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-### <a name="33">类文件结构</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="34">类文件结构</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 -  方法体出现ACC_SYNCHRONIZED 标识，该标识指明了该方法是一个同步方法，JVM 通过该 ACC_SYNCHRONIZED 访问标志来辨别一个方法是否声明为同步方法，从而执行相应的同步调用。
 ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/basic/picture/synchronizeMethod.jpg)
 - 方法体对应的访问范围
 ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/basic/picture/classArea.jpg)
 
-### <a name="34">双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="35">双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 站在虚拟机角度，只存在两种不同的类加载器：
 1. 启动类加载器BootStrap ClassLoader，由虚拟机实现，是虚拟机自身一部分。
 2. 其他所有的类加载器，由Java语言实现，独立于虚拟机之外，都是继承自抽象类java.lang.ClassLoader。
@@ -489,7 +507,43 @@ java相关的三层类加载器
     }
 ```
 
-### <a name="35">类初始化的时机</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="36">自定义类加载器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+1. 加载非classpath下的类，从非标准的来源加载代码
+2. 加载加密过的类文件，使用秘钥进行解密。
+
+```
+public class MyClassLoader extends ClassLoader {
+ 
+    private String classPath;
+ 
+    public MyClassLoader(String classPath) {
+        this.classPath = classPath;
+    }
+ 
+    private byte[] loadByte(String name) throws Exception {
+        name = name.replaceAll("\\.", "/");
+        FileInputStream fis = new FileInputStream(classPath + "/" + name + ".class");
+        int len = fis.available();
+        byte[] data = new byte[len];
+        fis.read(data);
+        fis.close();
+        return data;
+    }
+ 
+    @Override
+    protected Class<?> findClass(String name) {
+        byte[] data = new byte[0];
+        try {
+            data = loadByte(name);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return defineClass(name, data, 0, data.length);
+    }
+}
+```
+
+### <a name="37">类初始化的时机</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - Java 虚拟机规范没有强制约束类加载过程的第一阶段（即：加载）什么时候开始，但对于“初始化”阶段，有着严格的规定。有且仅有 5 种情况必须立即对类进行“初始化”：
   - 在遇到 new、putstatic、getstatic、invokestatic 字节码指令时，如果类尚未初始化，则需要先触发其初始化。
   - 对类进行反射调用时，如果类还没有初始化，则需要先触发其初始化。
@@ -498,18 +552,18 @@ java相关的三层类加载器
   - 当使用 JDK 1.7 的动态语言支持时，如果一个 java.lang.invoke.MethodHandle 实例最后的解析结果为 REF_getStatic、REF_putStatic、REF_invokeStatic 的方法句柄，并且这个方法句柄所对应的类还没初始化，则需要先触发其初始化。
 - 这 5 种场景中的行为称为对一个类进行主动引用，除此之外，其它所有引用类的方式都不会触发初始化，称为被动引用。
 
-### <a name="36">类的生命周期</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="38">类的生命周期</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 类的生命周期： 加载、连接[验证、准备、解析]、初始化、使用、卸载。
-#### <a name="37">加载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="39">加载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 类加载过程的第一步，主要完成下面3件事情：
   - 通过全类名获取定义此类的二进制字节流
   - 将字节流所代表的静态存储结构转换为方法区的运行时数据结构
   - 在内存中生成一个代表该类的 Class 对象,作为方法区这些数据的访问入口
 
-#### <a name="38">验证</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="40">验证</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 验证的范围：文件格式、元数据、字节码、符号引用验证
 
-#### <a name="39">准备</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="41">准备</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 准备阶段是正式为类变量分配内存并设置类变量初始值的阶段，这些内存都将在方法区中分配。对于该阶段有以下几点需要注意：
 - 进行内存分配的仅包括类变量（static），而不包括实例变量
 - 这里所设置的初始值"通常情况"下是数据类型默认的零值（如0、0L、null、false等）
@@ -523,10 +577,10 @@ public static final int v = 8080;
 
 ```
 
-#### <a name="40">解析</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="42">解析</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 解析阶段是虚拟机将常量池内的符号引用替换为直接引用的过程。解析动作主要针对类或接口、字段、类方法、接口方法、方法类型、方法句柄和调用限定符7类符号引用进行。
 
-#### <a name="41">初始化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="43">初始化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 - 虚拟机严格规范了有且只有5种情况下，必须对类进行初始化(只有主动去使用类才会初始化类)：
 1. 当遇到 new 、 getstatic、putstatic或invokestatic 这4条直接码指令时，比如 new 一个类，读取一个静态字段(未被 final 修饰)、或调用一个类的静态方法时。
@@ -541,7 +595,7 @@ public static final int v = 8080;
 6. 当一个接口中定义了JDK8新加入的默认方法（被default关键字修饰的接口方法）时，如果有这个接口的实现类发生了初始化，那该接口要在其之前被初始化。
 
 
-#### <a name="42">卸载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="44">卸载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 卸载类即该类的Class对象被GC。
 
 - 卸载类需要满足3个要求:
@@ -549,7 +603,7 @@ public static final int v = 8080;
   - 该类没有在其他任何地方被引用
   - 该类的类加载器的实例已被GC
 
-### <a name="43">虚拟机中对象的创建</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="45">虚拟机中对象的创建</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
  ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/basic/picture/objcreate.jpg)
 
 - 对象的创建
@@ -565,9 +619,59 @@ public static final int v = 8080;
 4. 设置对象头：进行对象的必要设置如那个类的示例、hashcode、GC分代年龄等信息，这些信息存放在对象头中。
 5. 上数工作完成之后，java开始调用对象的构造函数。
 
-## <a name="44">CMS + ParNew收集器的流程梳理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-### <a name="45">young区域(年轻代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="46">堆内存的设置要点</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+1. 新生代的内存大小设置建议：Sun官方推荐配置为整个堆的3/8。
+2. 服务器的内存需要预留一部分给永久代、线程栈及NIO
+
+- 内存分配问题
+省略比较小的区域，可以总结JVM占用的内存：
+- JVM内存 ≈ Java永久代 ＋ Java堆(新生代和老年代) ＋ 线程栈＋ Java NIO
+
+假设原来的内存分配是：6g(java堆) ＋ 600m(监控) ＋ 800m(系统)，剩余大约600m内存未分配。
+
+现在分析这600m内存的分配情况：
+1. Linux保留大约200m，这部分是Linux正常运行的需要，
+2. Java服务的线程数量是160个，JVM默认的线程栈大小是1m，因此使用160m内存，
+3. Java NIO buffer，通过JMX查到最多占用了200m，
+4. Java服务使用NIO大量读写文件，需要使用PageCache，正如前面分析，这个暂时不好定量估算大小。
+前三项加起来已经560m，因此可以断定Linux物理内存不够使用。
+
+
+以下是sun公司的性能优化白皮书中提到的几个例子： 
+1．对于吞吐量的调优。机器配置：4G的内存，32个线程并发能力。 
+```
+java -Xmx3800m -Xms3800m -Xmn2g -Xss128k -XX:+UseParallelGC -XX:ParallelGCThreads=20 
+
+-Xmx3800m -Xms3800m 配置了最大Java Heap来充分利用系统内存。 
+-Xmn2g 创建足够大的青年代（可以并行被回收）充分利用系统内存，防止将短期对象复制到老年代。 
+-Xss128 减少默认最大的线程栈大小，提供更多的处理虚拟内存地址空间被进程使用。 
+-XX:+UseParallelGC 采用并行垃圾收集器对年青代的内存进行收集，提高效率。 
+-XX:ParallelGCThreads=20 减少垃圾收集线程，默认是和服务器可支持的线程最大并发数相同，往往不需要配置到最大值。 
+
+```
+2．尝试采用对老年代并行收集 
+```
+java -Xmx3550m -Xms3550m -Xmn2g -Xss128k -XX:+UseParallelGC -XX:ParallelGCThreads=20 -XX:+UseParallelOldGC 
+
+-Xmx3550m -Xms3550m 内存分配被减小，因为ParallelOldGC会增加对于Native Heap的需求，因此需要减小Java Heap来满足需求。 
+-XX:+UseParallelOldGC 采用对于老年代并发收集的策略，可以提高收集效率。 
+```
+
+3．提高吞吐量，减少应用停顿时间 
+```
+java -Xmx3550m -Xms3550m -Xmn2g -Xss128k -XX:ParallelGCThreads=20 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:SurvivorRatio=8 -XX:TargetSurvivorRatio=90 -XX:MaxTenuringThreshold=31 
+
+-XX:+UseConcMarkSweepGC -XX:+UseParNewGC 选择了并发标记交换收集器，它可以并发执行收集操作，降低应用停止时间，同时它也是并行处理模式，可以有效地利用多处理器的系统的多进程处理。 
+-XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=31 表示在青年代中Eden和Survivor比例，设置增加了Survivor的大小，越大的survivor空间可以允许短期对象尽量在年青代消亡。 
+-XX:TargetSurvivorRatio=90 允许90%的空间被占用，超过默认的50%，提高对于survivor的使用率。
+```
+
+- 相关文章： https://zhuanlan.zhihu.com/p/61049063?utm_source=wechat_session
+
+## <a name="47">CMS + ParNew收集器的流程梳理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+
+### <a name="48">young区域(年轻代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 对象首先分配到Eden，分配满了触发Young Gc(Minor Gc)，基于复制交换算法，晋升对象年龄+1。
 ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/basic/picture/edenGc.jpg)
 2. 年龄到达老年代门槛的晋升老年代。
@@ -583,15 +687,15 @@ public static final int v = 8080;
     > 在发生 Minor GC 之前，虚拟机必须先检查老年代最大可用的连续空间是否大于新生代所有对象总空间，如果这个条件成立，那这一次 Minor GC 可以确保是安全的。如果不成立，则虚拟机会先查看 - XX:HandlePromotionFailure 参数的设置值是否允许担保失败 (Handle Promotion Failure)；如果允许，那会继续检查老年代最大可用的连续空间是否大于历次晋升到老年代对象的平均大小，如果大于，将尝试进行一次 Minor GC，尽管这次 Minor GC 是有风险的；如果小于，或者-XX: HandlePromotionFailure设置不允许冒险，那这时就要改为进行一次 Full GC。
 
 
-#### <a name="46">对象分配内存方式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="49">对象分配内存方式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - **TLAB**：Thread Local Allocation Buffer 的简写，基于 CAS 的独享线程（Mutator Threads）可以优先将对象分配在 Eden 中的一块内存，因为是 Java 线程独享的内存区没有锁竞争，所以分配速度更快，每个 TLAB 都是一个线程独享的。
 - 整齐空间：指针碰撞
 - 碎片空间：空闲链表（free list）：通过额外的存储记录空闲的地址，将随机 IO 变为顺序 IO，但带来了额外的空间消耗。
 
-### <a name="47">old区域(老年代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-#### <a name="48">CMS GC原因</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="50">old区域(老年代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="51">CMS GC原因</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 触发 CMS GC有：
-1. Old 区达到回收阈值.
+1. Old 区达到回收阈值
 2. MetaSpace 空间不足
 3. Young 区晋升失败
 4. 大对象担保失败
@@ -599,7 +703,7 @@ public static final int v = 8080;
 6. 显式调用System.gc
 7. 并发模式失败(浮动垃圾导致)
 
-#### <a name="49">CMS GC 垃圾回收模式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="52">CMS GC 垃圾回收模式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 CMS GC 的垃圾回收共分为 Background 和 Foreground 两种模式，
 - Background： 正常的CMS收集过程，初始标记、并发标记、重新标记、标记清除
 - Foreground： 会进行一次压缩式 GC，使用 MSC（Mark-Sweep-Compact）做 Full GC。收集的范围是 Java 堆的 Young 区和 Old 区以及 MetaSpace，会带来非常长的 STW。
@@ -615,18 +719,18 @@ CMS 在Background回收的过程中，STW 的阶段主要是 Init Mark 和 Final
 - 带压缩动作的算法，称为 MSC，上面我们介绍过，使用标记-清理-压缩，单线程全暂停的方式，对整个堆进行垃圾收集，也就是真正意义上的 Full GC，暂停时间要长于普通 CMS。
 - 不带压缩动作的算法，收集 Old 区，和普通的 CMS 算法比较相似，暂停时间相对 MSC 算法短一些。
 
-#### <a name="50">其他老年代问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="53">其他老年代问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
  CMS 无法处理浮动垃圾（Floating Garbage）。CMS 的并发清理阶段，应用还在运行，因此不断有新的垃圾产生，而这些垃圾不在这次清理标记的范畴里，无法在本次 GC 被清除掉，这些就是浮动垃圾，除此之外在 Remark 之前那些断开引用脱离了读写屏障控制的对象也算浮动垃圾。
 
-### <a name="51">相关文章</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="54">相关文章</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 [图解垃圾回收](https://www.cnblogs.com/hynblogs/p/12292345.html)
 
-## <a name="52">Java虚拟机内存调优</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="55">Java虚拟机内存调优</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
  ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/basic/picture/jvmParameter.jpg)
  ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/basic/picture/jvmGCType.jpg)
 
 
-### <a name="53">基本概念重述</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="56">基本概念重述</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 > 跨代引用解决方案
 
 Card Table：中文翻译为卡表，主要是用来标记卡页的状态，每个卡表项对应一个卡页。当卡页中一个对象引用有写操作时，写屏障将会标记对象所在的卡表状态改为 dirty，卡表的本质是用来解决跨代引用的问题。
@@ -638,15 +742,15 @@ Card Table：中文翻译为卡表，主要是用来标记卡页的状态，每�
 
 Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造者，通过 Allocator 进行 allocate 和 free。
 
-#### <a name="54">工具整理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="57">工具整理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-##### <a name="55">命令行终端</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="58">命令行终端</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 标准终端类：jps、jinfo、jstat、jstack、jmap
 
 功能整合类：jcmd、vjtools、arthas、greys
 
-##### <a name="56">可视化界面</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="59">可视化界面</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 简易：JConsole、JVisualvm、HA、GCHisto、GCViewer
 
@@ -655,10 +759,10 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 命令行推荐 arthas ，可视化界面推荐 JProfiler，此外还有一些在线的平台 gceasy、heaphero、fastthread ，美团内部的 Scalpel（一款自研的 JVM 问题诊断工具，暂时未开源）也比较好用。
 
 
-### <a name="57">GC 调优目的</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="60">GC 调优目的</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 将转移到老年代的对象数量降低到最小； 减少 GC 的执行时间。
 
-### <a name="58">GC 调优策略</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="61">GC 调优策略</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 **策略 1**：将新对象预留在新生代，由于 Full GC 的成本远高于 Minor GC，因此尽可能将对象分配在新生代是明智的做法，实际项目中根据 GC 日志分析新生代空间大小分配是否合理，适当通过“-Xmn”命令调节新生代大小，最大限度降低新对象直接进入老年代的情况。
 
 **策略 2**：大对象进入老年代，虽然大部分情况下，将对象分配在新生代是合理的。但是对于大对象这种做法却值得商榷，大对象如果首次在新生代分配可能会出现空间不足导致很多年龄不够的小对象被分配的老年代，破坏新生代的对象结构，可能会出现频繁的 full gc。因此，对于大对象，可以设置直接进入老年代（当然短命的大对象对于垃圾回收来说简直就是噩梦）。-XX:PretenureSizeThreshold 可以设置直接进入老年代的对象大小。
@@ -671,12 +775,12 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 >MinorGC 执行时间不到50ms； Minor GC 执行不频繁，约10秒一次； Full GC 执行时间不到1s； Full GC 执行频率不算频繁，不低于10分钟1次。
 
 
-### <a name="59">调优指标</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="62">调优指标</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 延迟（Latency）：也可以理解为最大停顿时间，即垃圾收集过程中一次 STW 的最长时间，越短越好，一定程度上可以接受频次的增大，GC 技术的主要发展方向。
 
 - 吞吐量（Throughput）：应用系统的生命周期内，由于 GC 线程会占用 Mutator 当前可用的 CPU 时钟周期，吞吐量即为 Mutator 有效花费的时间占系统总运行时间的百分比，例如系统运行了 100 min，GC 耗时 1 min，则系统吞吐量为 99%，吞吐量优先的收集器可以接受较长的停顿。
 
-### <a name="60">问题排查思路</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="63">问题排查思路</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 四种分析思路
 
 - 时序分析：先发生的事件是根因的概率更大，通过监控手段分析各个指标的异常时间点，还原事件时间线，如先观察到 CPU 负载高（要有足够的时间 Gap），那么整个问题影响链就可能是：
@@ -691,15 +795,15 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 - 反证分析：对其中某一表象进行反证分析，即判断表象的发不发生跟结果是否有相关性，例如我们从整个集群的角度观察到某些节点慢查和 CPU 都正常，但也出了问题，那么整个问题影响链就可能是：
 > GC 耗时增大 -> 线程 Block 增多 ->  RT 上涨。
 
-### <a name="61">案例</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-#### <a name="62">美团技术案例（基于CMS JDK1.8）</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="64">案例</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="65">美团技术案例（基于CMS JDK1.8）</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/basic/picture/gcProcess.jpg)
 
 ![avatar](https://github.com/rbmonster/learning-note/blob/master/src/main/java/com/learning/basic/picture/localIssue.png)
 
 
-##### <a name="63">场景一：动态扩容引起的空间震荡</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="66">场景一：动态扩容引起的空间震荡</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 服务刚刚启动时 GC 次数较多，最大空间剩余很多但是依然发生 GC， GC Cause 一般为 Allocation Failure，且在 GC 日志中会观察到经历一次 GC ，堆内各个空间的大小会被调整。
 
 解决：尽量将成对出现的空间大小配置参数设置成固定的，
@@ -708,7 +812,7 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 策略：保证 Java 虚拟机的堆是稳定的，避免弹性伸缩带来的额外 GC 消耗，确保 -Xms 和 -Xmx 设置的是一个值（即初始值和最大值一致），获得一个稳定的堆，同理在 MetaSpace 区也有类似的问题
 > 在不追求停顿时间的情况下震荡的空间也是有利的，可以动态地伸缩以节省空间，例如作为富客户端的 Java 应用。
 
-##### <a name="64">场景二：显式 GC 的去与留 (System.gc)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="67">场景二：显式 GC 的去与留 (System.gc)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 除了扩容缩容会触发 CMS GC 之外，还有
  1. Old 区达到回收阈值.
  2. MetaSpace 空间不足
@@ -736,7 +840,7 @@ CMS GC 共分为 Background 和 Foreground 两种模式，
 
 > 不止 CMS，在 G1 或 ZGC中开启 ExplicitGCInvokesConcurrent 模式，都会采用高性能的并发收集方式进行收集，不过还是建议在代码规范方面也要做好约束，规范好 System.gc 的使用。
 
-##### <a name="65">场景三：MetaSpace 区 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="68">场景三：MetaSpace 区 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：JVM 在启动后或者某个时间点开始，MetaSpace 的已使用大小在持续增长，同时每次 GC 也无法释放，调大 MetaSpace 空间也无法彻底解决。
 
 --- 
@@ -758,7 +862,7 @@ MetaSpace 弹性伸缩：由于 MetaSpace 空间和 Heap 并不在一起，所�
 策略： 给 MetaSpace 区的使用率加一个监控，如果指标有波动提前发现并解决问题。
 
 
-##### <a name="66">场景四：过早晋升 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="69">场景四：过早晋升 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：
 1. 分配速率接近于晋升速率，对象晋升年龄较小
 2. Full GC 比较频繁，且经历过一次 GC 之后 Old 区的变化比例非常大。
@@ -782,12 +886,12 @@ MetaSpace 弹性伸缩：由于 MetaSpace 空间和 Heap 并不在一起，所�
 - 偶发较大：通过内存分析工具找到问题代码，从业务逻辑上做一些优化。
 - 一直较大：当前的 Collector 已经不满足 Mutator 的期望了，这种情况要么扩容 Mutator 的 VM，要么调整 GC 收集器类型或加大空间。
 
-##### <a name="67">场景五：CMS Old GC 频繁 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="70">场景五：CMS Old GC 频繁 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：Old 区频繁的做 CMS GC，但是每次耗时不是特别长，整体最大 STW 也在可接受范围内，但由于 GC 太频繁导致吞吐下降比较多。
  
 > 描述过于抽象，见文章
 
-##### <a name="68">场景六：单次 CMS Old GC 耗时长</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="71">场景六：单次 CMS Old GC 耗时长</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 CMS 在回收的过程中，STW 的阶段主要是 Init Mark 和 Final Remark 这两个阶段
 - 初始标记 Init Mark ： 整个过程比较简单，从 GC Root 出发标记 Old 中的对象，处理完成后借助 BitMap 处理下 Young 区对 Old 区的引用，整个过程基本都比较快，很少会有较大的停顿。
 - 最终标记 Final Remark ：Final Remark 的开始阶段与 Init Mark 处理的流程相同，但是后续多了 **Card Table 遍历**、**Reference 实例的清理**并将其加入到 Reference 维护的 pend_list 中，如果要收集元数据信息，还要清理 SystemDictionary、CodeCache、SymbolTable、StringTable 等组件中不再使用的资源
@@ -801,7 +905,7 @@ CMS 在回收的过程中，STW 的阶段主要是 Init Mark 和 Final Remark �
     - scrub symbol table 表示清理元数据符号引用耗时，观察 MetaSpace 区的历史使用峰值，看是否有使用动态类加载或者 DSL 处理等。
         - > 如果MateSpace 数据没啥变化，可以通过 -XX:-CMSClassUnloadingEnabled 来避免 MetaSpace 的处理。
  
-##### <a name="69">场景七：内存碎片&收集器退化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="72">场景七：内存碎片&收集器退化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：
 并发的 CMS GC 算法，退化为 Foreground 单线程串行 GC 模式，STW 时间超长，有时会长达十几秒。其中 CMS 收集器退化后单线程串行 GC 算法有两种：
 - 带压缩动作的算法，称为 MSC，上面我们介绍过，使用标记-清理-压缩，单线程全暂停的方式，对整个堆进行垃圾收集，也就是真正意义上的 Full GC，暂停时间要长于普通 CMS。
@@ -827,7 +931,7 @@ CMS 在回收的过程中，STW 的阶段主要是 Init Mark 和 Final Remark �
 - 浮动垃圾：视情况控制每次晋升对象的大小，或者缩短每次 CMS GC 的时间，必要时可调节 NewRatio 的值。另外就是使用 -XX:+CMSScavengeBeforeRemark 在过程中提前触发一次 Young GC，防止后续晋升过多对象。
 
 
-##### <a name="70">场景八：堆外内存 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="73">场景八：堆外内存 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象： 内存使用率不断上升，甚至开始使用 SWAP 内存，同时可能出现 GC 时间飙升，线程被 Block 等现象，通过 top 命令发现 Java 进程的 RES 甚至超过了 -Xmx 的大小。
 
 JVM 的堆外内存泄漏，主要有两种的原因：
@@ -837,23 +941,23 @@ JVM 的堆外内存泄漏，主要有两种的原因：
 策略： 在项目中添加 -XX:NativeMemoryTracking=detail JVM参数后重启项目（需要注意的是，打开 NMT 会带来 5%~10% 的性能损耗）。使用命令 jcmd pid VM.native_memory detail 查看内存分布。
     
 
-##### <a name="71">场景九：JNI 引发的 GC 问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="74">场景九：JNI 引发的 GC 问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 > 太抽象了
 
-#### <a name="72">不恰当的数据结构导致内存过大</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="75">不恰当的数据结构导致内存过大</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - -Xms4g -Xmx8g -Xmn1g 使用ParNew + CMS组合。
 - 业务上需要10min加载80MB的数据到内存，会产生100W HashMap entry
 - Minor GC超过500ms，因为新生代使用了标记复制算法
 - 不从修改程序，仅从GC调优，可以直接去掉SurvivorRatio，让新生代存活的对象一次Minor GC就进入到老年代
     - -XX:SurvivorRatio=65536 -XX:MaxTenuringThreshold=0（或者-XX:+AlwaysTenure)
-#### <a name="73">堆外内存导致溢出错误</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="76">堆外内存导致溢出错误</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - NIO使用直接内存复制，而虚拟机中最大最小内存直接设值成系统内存大小了
 
-#### <a name="74">异步系统Socket连接</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="77">异步系统Socket连接</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - Socket 使用BIO连接异步处理，导致了系统连接数过多，进而虚拟机崩溃
 
-#### <a name="75">Evosuite 自动生成单元测试</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="78">Evosuite 自动生成单元测试</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 表现：maven build时候单元测试需要一个多小时。
 
 排查：
@@ -862,7 +966,7 @@ JVM 的堆外内存泄漏，主要有两种的原因：
 3. jmap -heap pid 导出堆的分配情况
 
 原因为Evosuite自动生成的test中存在：
-1. StringUtils的expend 测试，延长字符串到1610613374长度。jdk8，String内部使用char数组。
+1. StringUtils的expend测试，延长字符串到1610613374长度。jdk8，String内部使用char数组。
 2. 调用Util类分配694225808 长度的ArrayList 数组空间，并分配元素。
 3. 死循环线程
 
@@ -874,12 +978,12 @@ YGC出现大量复制工作，很耗费时间。每次分配的空间过大，�
 
 解决处理：死循环线程、修改自动生成的test分配合理内存。
 
-#### <a name="76">其他案例分析资料</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="79">其他案例分析资料</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - [JSP引起的老年代不回收场景](https://blog.csdn.net/u012948161/article/details/102983795?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.control&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.control)
 - [native memory](http://mahaijin.github.io/2015/04/27/JVM%E7%9A%84Heap%20Memory%E5%92%8CNative%20Memory/)
 - [美团：Java中9种常见的CMS GC问题分析与解决](https://mp.weixin.qq.com/s/RFwXYdzeRkTG5uaebVoLQw)
 
-#### <a name="77">其他建议</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="80">其他建议</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 禁用偏向锁：偏向锁在只有一个线程使用到该锁的时候效率很高，但是在竞争激烈情况会升级成轻量级锁，此时就需要先消除偏向锁，这个过程是 STW 的。
     - > 在已知并发激烈的前提下，一般会禁用偏向锁 -XX:-UseBiasedLocking 来提高性能。
 - 主动式 GC： 观测 Old 区的使用情况，即将到达阈值时将应用服务摘掉流量，手动触发一次 Major GC。必要时引入，会影响系统健壮性。
